Add icon and color

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: substitute env vars
 description: Substitute environment variables in templated files
+icon: chevron-right
+color: yellow
 inputs:
   templates:
     description: The list of templated files to process
